--- a/src/main/kotlin/org/wfanet/panelmatch/client/tools/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/tools/BUILD.bazel
@@ -1,11 +1,16 @@
+load("@bazel_jar_jar//:jar_jar.bzl", "jar_jar")
 load("@rules_java//java:defs.bzl", "java_binary")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
-load("@bazel_jar_jar//:jar_jar.bzl", "jar_jar")
 
 package(default_visibility = [
     "//src/main/kotlin/org/wfanet/panelmatch:__subpackages__",
     "//src/test/kotlin/org/wfanet/panelmatch:__subpackages__",
 ])
+
+kt_jvm_library(
+    name = "exchange_workflow_format",
+    srcs = ["ExchangeWorkflowFormat.kt"],
+)
 
 kt_jvm_library(
     name = "tools",
@@ -60,8 +65,10 @@ kt_jvm_library(
     name = "serialize_exchange_workflow",
     srcs = ["SerializeExchangeWorkflow.kt"],
     deps = [
+        ":exchange_workflow_format",
         "//src/main/proto/private_membership/batch:shared_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
     ],
@@ -78,6 +85,7 @@ kt_jvm_library(
     testonly = True,
     srcs = ["BeamJobsMain.kt"],
     deps = [
+        ":exchange_workflow_format",
         "//imports/java/org/apache/beam/runners/spark",
         "//src/main/kotlin/org/wfanet/panelmatch/client/deploy",
         "//src/main/kotlin/org/wfanet/panelmatch/client/deploy/example",
@@ -91,6 +99,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/panelmatch/common/certificates/testing",
         "//src/main/proto/wfa/panelmatch/client/eventpreprocessing:combined_events_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/client/exchangetasks:join_key_exchange_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/client/privatemembership:decrypt_event_data_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/client/tools:data_provider_event_set_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
