--- a/src/test/kotlin/org/wfanet/panelmatch/client/common/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/panelmatch/client/common/BUILD.bazel
@@ -1,6 +1,23 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 
 kt_jvm_test(
+    name = "ProtoConversionsTest",
+    timeout = "short",
+    srcs = ["ProtoConversionsTest.kt"],
+    test_class = "org.wfanet.panelmatch.client.common.ProtoConversionsTest",
+    deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
+        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+    ],
+)
+
+kt_jvm_test(
     name = "TaskParametersTest",
     timeout = "short",
     srcs = ["TaskParametersTest.kt"],
