--- a/src/test/kotlin/org/wfanet/panelmatch/client/exchangetasks/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/panelmatch/client/exchangetasks/BUILD.bazel
@@ -42,7 +42,7 @@ kt_jvm_test(
     test_class = "org.wfanet.panelmatch.client.exchangetasks.ExchangeTaskFailedExceptionTest",
     deps = [
         "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempt_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_step_attempt_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/org/junit",
     ],
@@ -103,6 +103,7 @@ kt_jvm_test(
     srcs = ["ExchangeTaskMapperTest.kt"],
     test_class = "org.wfanet.panelmatch.client.exchangetasks.ExchangeTaskMapperTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/eventpreprocessing/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks",
         "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks/testing",
@@ -114,7 +115,7 @@ kt_jvm_test(
         "//src/main/kotlin/org/wfanet/panelmatch/common/crypto/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/secrets/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/client/storage:storage_details_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
@@ -214,6 +215,7 @@ kt_jvm_test(
         "//src/main/kotlin/org/wfanet/panelmatch/client/storage/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/storage",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/org/junit",
@@ -234,6 +236,7 @@ kt_jvm_test(
         "//src/main/kotlin/org/wfanet/panelmatch/client/storage/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/storage",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/org/junit",
