--- a/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/panelmatch/client/launcher/BUILD.bazel
@@ -6,11 +6,11 @@ kt_jvm_test(
     srcs = ["ExchangeStepLauncherTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.ExchangeStepLauncherTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
+        "//src/main/kotlin/org/wfanet/panelmatch/common",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempt_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/org/junit",
@@ -29,10 +29,10 @@ kt_jvm_test(
     test_class = "org.wfanet.panelmatch.client.launcher.ExchangeStepValidatorImplTest",
     deps = [
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
+        "//src/main/kotlin/org/wfanet/panelmatch/common",
         "//src/main/kotlin/org/wfanet/panelmatch/common/secrets/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempt_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
@@ -50,7 +50,9 @@ kt_jvm_test(
     srcs = ["GrpcApiClientTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.GrpcApiClientTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
+        "//src/main/kotlin/org/wfanet/panelmatch/common",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempt_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempts_service_kt_jvm_grpc",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempts_service_kt_jvm_proto",
@@ -58,6 +60,8 @@ kt_jvm_test(
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_steps_service_kt_jvm_grpc",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_steps_service_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_step_attempt_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/org/junit",
@@ -77,6 +81,7 @@ kt_jvm_test(
     srcs = ["ExchangeTaskExecutorTest.kt"],
     test_class = "org.wfanet.panelmatch.client.launcher.ExchangeTaskExecutorTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
         "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks",
         "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/client/launcher",
@@ -87,7 +92,7 @@ kt_jvm_test(
         "//src/main/kotlin/org/wfanet/panelmatch/common",
         "//src/main/kotlin/org/wfanet/panelmatch/common/secrets/testing",
         "//src/main/kotlin/org/wfanet/panelmatch/common/testing",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
+        "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
