--- a/src/test/kotlin/org/wfanet/panelmatch/common/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/panelmatch/common/BUILD.bazel
@@ -1,6 +1,21 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
 
 kt_jvm_test(
+    name = "FingerprintersTest",
+    timeout = "short",
+    srcs = ["FingerprintersTest.kt"],
+    test_class = "org.wfanet.panelmatch.common.FingerprintersTest",
+    deps = [
+        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
+        "@wfa_common_jvm//imports/java/com/google/common:guava",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
+    ],
+)
+
+kt_jvm_test(
     name = "BlockingIteratorTest",
     timeout = "short",
     srcs = ["BlockingIteratorTest.kt"],
