--- a/.github/workflows/reporting-v2-performance-testing.yml
+++ b/.github/workflows/reporting-v2-performance-testing.yml
@@ -1,11 +1,11 @@
 name: Reporting V2 Performance Testing
 
 on:
-  push:
+  workflow_dispatch:
 
 jobs:
   update-reporting-v2:
-    uses: ./.github/workflows/configure-kingdom.yml
+    uses: ./.github/workflows/configure-reporting-v2.yml
     secrets: inherit
     with:
       image-tag: a037c3de037d7963aa64fda45929f4056868212f
