--- a/src/main/proto/wfa/panelmatch/client/internal/BUILD.bazel
+++ b/src/main/proto/wfa/panelmatch/client/internal/BUILD.bazel
@@ -4,6 +4,22 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")
 package(default_visibility = ["//visibility:public"])
 
 proto_library(
+    name = "exchange_checkpoint_proto",
+    srcs = ["exchange_checkpoint.proto"],
+    deps = [
+        ":exchange_step_attempt_proto",
+        ":exchange_workflow_proto",
+        "@com_google_googleapis//google/type:date_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "exchange_checkpoint_kt_jvm_proto",
+    deps = [":exchange_checkpoint_proto"],
+)
+
+proto_library(
     name = "exchange_step_attempt_proto",
     srcs = ["exchange_step_attempt.proto"],
     strip_import_prefix = "/src/main/proto",
