--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -129,7 +129,6 @@ bazel_dep(
 )
 bazel_dep(
     name = "common-jvm",
-    version = "0.85.0",
     repo_name = "wfa_common_jvm",
 )
 bazel_dep(
@@ -311,4 +310,14 @@ http_archive(
 single_version_override(
     module_name = "boringssl",
     version = BORINGSSL_VERSION,
+)
+
+# DO_NOT_SUBMIT(world-federation-of-advertisers/common-jvm#258): Use version
+archive_override(
+    module_name = "common-jvm",
+    integrity = "sha256-wpOn7gBepTp6K3VxXjsD/t9LntkY+uR6istuL3M85CI=",
+    strip_prefix = "common-jvm-6002e1da28e6192bd2992a0d6b77b4a185d40eef",
+    urls = [
+        "https://github.com/world-federation-of-advertisers/common-jvm/archive/6002e1da28e6192bd2992a0d6b77b4a185d40eef.tar.gz",
+    ],
 )
