--- a/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -1,12 +1,15 @@
+load("@rules_jvm_external//:defs.bzl", "maven_export")
+load("@wfa_common_jvm//build/maven:defs.bzl", "artifact_version")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = ["//visibility:public"])
 
+MAVEN_COORDINATES = "org.wfanet.measurement.eventdataprovider:shareshuffle-v2alpha:" + artifact_version()
+
 kt_jvm_library(
     name = "shareshuffle",
-    srcs = glob([
-        "*.kt",
-    ]),
+    srcs = glob(["*.kt"]),
+    tags = ["maven_coordinates=" + MAVEN_COORDINATES],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:population_spec_validator",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
@@ -22,7 +25,16 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/eventdataprovider/shareshuffle:vid_index_map_entry_kt_jvm_proto",
         "@any_sketch_java//src/main/java/org/wfanet/frequencycount:secret_share_generator_adapter",
         "@wfa_common_jvm//imports/java/com/google/common:guava",
+        "@wfa_common_jvm//imports/kotlin/kotlin/reflect",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
         "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/dataprovider",
     ],
+)
+
+maven_export(
+    name = "shareshuffle_maven",
+    lib_name = "shareshuffle",
+    maven_coordinates = MAVEN_COORDINATES,
+    tags = ["no-javadocs"],
+    visibility = ["//visibility:private"],
 )
