--- a/src/main/proto/wfa/panelmatch/client/internal/BUILD.bazel
+++ b/src/main/proto/wfa/panelmatch/client/internal/BUILD.bazel
@@ -4,6 +4,17 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")
 package(default_visibility = ["//visibility:public"])
 
 proto_library(
+    name = "certificate_proto",
+    srcs = ["certificate.proto"],
+    deps = [],
+)
+
+kt_jvm_proto_library(
+    name = "certificate_kt_jvm_proto",
+    deps = [":certificate_proto"],
+)
+
+proto_library(
     name = "exchange_checkpoint_proto",
     srcs = ["exchange_checkpoint.proto"],
     deps = [
