--- a/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
+++ b/src/main/k8s/dev/synthetic_generator_config_files_kustomization.yaml
@@ -22,3 +22,7 @@ configMapGenerator:
   - synthetic_event_group_spec_large_4.textproto
   - synthetic_event_group_spec_large_5.textproto
   - synthetic_event_group_spec_large_6.textproto
+  - synthetic_population_spec_enormous.textproto
+  - synthetic_event_group_spec_enormous_1.textproto
+  - synthetic_event_group_spec_enormous_2.textproto
+  - synthetic_event_group_spec_enormous_3.textproto
