--- a/src/main/k8s/testing/data/BUILD.bazel
+++ b/src/main/k8s/testing/data/BUILD.bazel
@@ -14,6 +14,11 @@ filegroup(
 )
 
 filegroup(
+    name = "synthetic_generation_specs_enormous",
+    srcs = ["synthetic_population_spec_enormous.textproto"] + glob(["synthetic_event_group_spec_enormous*.textproto"]),
+)
+
+filegroup(
     name = "service_config",
     srcs = ["default_service_config.textproto"],
 )
