--- a/src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats/BUILD.bazel
@@ -22,6 +22,15 @@ kt_jvm_library(
 )
 
 kt_jvm_library(
+    name = "honest_majority_share_shuffle",
+    srcs = ["HonestMajorityShareShuffle.kt"],
+    deps = [
+        ":measurement_statistics",
+        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement:acdp_params_converter",
+    ],
+)
+
+kt_jvm_library(
     name = "stats_exceptions",
     srcs = ["StatsExceptions.kt"],
 )
@@ -31,6 +40,7 @@ kt_jvm_library(
     srcs = ["Variances.kt"],
     deps = [
         ":covariances",
+        ":honest_majority_share_shuffle",
         ":liquid_legions",
         ":measurement_statistics",
         ":metric_statistics",
