--- a/src/main/kotlin/org/wfanet/measurement/duchy/daemon/utils/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/daemon/utils/BUILD.bazel
@@ -28,6 +28,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/internal/duchy:differential_privacy_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/duchy:requisition_details_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/duchy/config:protocols_setup_config_kt_jvm_proto",
+        "//src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats:metric_statistics",
         "//src/main/proto/wfa/measurement/system/v1alpha:computation_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/system/v1alpha:computations_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/system/v1alpha:differential_privacy_kt_jvm_proto",
