--- a/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/server/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/server/BUILD.bazel
@@ -23,7 +23,10 @@ kt_jvm_library(
 kt_jvm_library(
     name = "utils",
     srcs = ["Utils.kt"],
-    visibility = ["//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/job:__subpackages__"],
+    visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/job:__subpackages__",
+        "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job:__subpackages__",
+    ],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/common/identity",
         "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common:flags",
