feat!: enable horizontal autoscaling of Liquid Legions v2 Mill

--- a/src/main/kotlin/org/wfanet/measurement/common/k8s/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/common/k8s/BUILD.bazel
@@ -5,8 +5,12 @@ package(
 )
 
 kt_jvm_library(
-    name = "k8s",
-    srcs = glob(["*.kt"]),
+    name = "client",
+    srcs = [
+        "JsonPatchOperation.kt",
+        "KubernetesClient.kt",
+        "Names.kt",
+    ],
     deps = [
         "//imports/java/io/kubernetes/client",
         "//imports/java/io/kubernetes/client/extended",
