--- a/src/main/kotlin/org/wfanet/measurement/duchy/mill/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/mill/BUILD.bazel
@@ -28,3 +28,14 @@ kt_jvm_library(
         "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/duchy",
     ],
 )
+
+kt_jvm_library(
+    name = "mill_flags",
+    srcs = ["MillFlags.kt"],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/common/identity",
+        "@wfa_common_jvm//imports/java/picocli",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
+    ],
+)
