--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/job/mill/liquidlegionsv2/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/job/mill/liquidlegionsv2/BUILD.bazel
@@ -6,16 +6,17 @@ load("//src/main/docker:macros.bzl", "java_image")
 package(default_testonly = True)  #TODO: delete when InMemoryKeyStore and FakeHybridCipher are not used.
 
 kt_jvm_library(
-    name = "liquid_legions_v2_mill_daemon",
+    name = "liquid_legions_v2_mill_job",
     srcs = [
-        "LiquidLegionsV2MillDaemon.kt",
         "LiquidLegionsV2MillFlags.kt",
+        "LiquidLegionsV2MillJob.kt",
     ],
     visibility = ["//src/main/kotlin/org/wfanet/measurement/duchy/deploy:__subpackages__"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/common/identity",
         "//src/main/kotlin/org/wfanet/measurement/duchy/db/computation",
         "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common:flags",
+        "//src/main/kotlin/org/wfanet/measurement/duchy/mill:mill_flags",
         "//src/main/kotlin/org/wfanet/measurement/duchy/mill/liquidlegionsv2:reach_frequency_liquid_legions_v2_mill",
         "//src/main/kotlin/org/wfanet/measurement/duchy/mill/liquidlegionsv2:reach_only_liquid_legions_v2_mill",
         "//src/main/proto/wfa/measurement/internal/duchy:computations_service_kt_jvm_grpc_proto",
@@ -34,10 +35,10 @@ kt_jvm_library(
 )
 
 kt_jvm_library(
-    name = "forwarded_storage_liquid_legions_v2_mill_daemon",
-    srcs = ["ForwardedStorageLiquidLegionsV2MillDaemon.kt"],
+    name = "forwarded_storage_liquid_legions_v2_mill_job",
+    srcs = ["ForwardedStorageLiquidLegionsV2MillJob.kt"],
     deps = [
-        ":liquid_legions_v2_mill_daemon",
+        ":liquid_legions_v2_mill_job",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage/forwarded",
@@ -45,15 +46,15 @@ kt_jvm_library(
 )
 
 java_binary(
-    name = "ForwardedStorageLiquidLegionsV2MillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.common.daemon.mill.liquidlegionsv2.ForwardedStorageLiquidLegionsV2MillDaemonKt",
-    runtime_deps = [":forwarded_storage_liquid_legions_v2_mill_daemon"],
+    name = "ForwardedStorageLiquidLegionsV2MillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.common.job.mill.liquidlegionsv2.ForwardedStorageLiquidLegionsV2MillJobKt",
+    runtime_deps = [":forwarded_storage_liquid_legions_v2_mill_job"],
 )
 
 java_image(
-    name = "forwarded_storage_liquid_legions_v2_mill_daemon_image",
-    binary = ":ForwardedStorageLiquidLegionsV2MillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.common.daemon.mill.liquidlegionsv2.ForwardedStorageLiquidLegionsV2MillDaemonKt",
+    name = "forwarded_storage_liquid_legions_v2_mill_job_image",
+    binary = ":ForwardedStorageLiquidLegionsV2MillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.common.job.mill.liquidlegionsv2.ForwardedStorageLiquidLegionsV2MillJobKt",
     target_compatible_with = DISTROLESS_JAVA,
     visibility = ["//src:docker_image_deployment"],
 )
