--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/liquidlegionsv2/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/liquidlegionsv2/BUILD.bazel
@@ -14,29 +14,30 @@ package(
 )
 
 kt_jvm_library(
-    name = "s3_liquid_legions_v2_mill_daemon",
-    srcs = ["S3LiquidLegionsV2MillDaemon.kt"],
+    name = "gcs_liquid_legions_v2_mill_job",
+    srcs = ["GcsLiquidLegionsV2MillJob.kt"],
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/daemon/mill/liquidlegionsv2:liquid_legions_v2_mill_daemon",
+        "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/job/mill/liquidlegionsv2:liquid_legions_v2_mill_job",
+        "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/spanner/computation",
         "@wfa_common_jvm//imports/java/picocli",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/aws/s3",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
     ],
 )
 
 java_binary(
-    name = "S3LiquidLegionsV2MillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.aws.daemon.mill.liquidlegionsv2.S3LiquidLegionsV2MillDaemonKt",
+    name = "GcsLiquidLegionsV2MillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.gcloud.job.mill.liquidlegionsv2.GcsLiquidLegionsV2MillJobKt",
     runtime_deps = [
-        ":s3_liquid_legions_v2_mill_daemon",
-        "//imports/java/software/amazon/awssdk/sts",
+        ":gcs_liquid_legions_v2_mill_job",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/logging",
     ],
 )
 
 java_image(
-    name = "s3_liquid_legions_v2_mill_daemon_image",
-    binary = ":S3LiquidLegionsV2MillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.aws.daemon.mill.liquidlegionsv2.S3LiquidLegionsV2MillDaemonKt",
+    name = "gcs_liquid_legions_v2_mill_job_image",
+    binary = ":GcsLiquidLegionsV2MillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.gcloud.job.mill.liquidlegionsv2.GcsLiquidLegionsV2MillJobKt",
     target_compatible_with = DISTROLESS_JAVA,
     visibility = ["//src:docker_image_deployment"],
 )
