--- a/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/spanner/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/spanner/testing/BUILD.bazel
@@ -6,6 +6,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/gcloud:deployment",
         "//src/main/kotlin/org/wfanet/measurement/integration/deploy/gcloud:__pkg__",
         "//src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud:__pkg__",
+        "//src/test/kotlin/org/wfanet/measurement/kingdom/job:__pkg__",
     ],
 )
 
