--- a/src/main/proto/wfa/measurement/internal/kingdom/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/kingdom/BUILD.bazel
@@ -597,3 +597,7 @@ kt_jvm_grpc_proto_library(
     name = "populations_service_kt_jvm_grpc_proto",
     deps = [":populations_service_proto"],
 )
+
+proto_and_kt_jvm_proto_library(
+    name = "operational_metrics",
+)
