--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/aws/job/mill/shareshuffle/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/aws/job/mill/shareshuffle/BUILD.bazel
@@ -14,10 +14,10 @@ package(
 )
 
 kt_jvm_library(
-    name = "s3_honest_majority_share_shuffle_mill_daemon",
-    srcs = ["S3HonestMajorityShareShuffleMillDaemon.kt"],
+    name = "s3_honest_majority_share_shuffle_mill_job",
+    srcs = ["S3HonestMajorityShareShuffleMillJob.kt"],
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/daemon/mill/shareshuffle:honest_majority_share_shuffle_mill_daemon",
+        "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/job/mill/shareshuffle:honest_majority_share_shuffle_mill_job",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/aws/s3",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
@@ -25,18 +25,18 @@ kt_jvm_library(
 )
 
 java_binary(
-    name = "S3HonestMajorityShareShuffleMillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.aws.daemon.mill.shareshuffle.S3HonestMajorityShareShuffleMillDaemonKt",
+    name = "S3HonestMajorityShareShuffleMillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.aws.job.mill.shareshuffle.S3HonestMajorityShareShuffleMillJobKt",
     runtime_deps = [
-        ":s3_honest_majority_share_shuffle_mill_daemon",
+        ":s3_honest_majority_share_shuffle_mill_job",
         "//imports/java/software/amazon/awssdk/sts",
     ],
 )
 
 java_image(
-    name = "s3_honest_majority_share_shuffle_mill_daemon_image",
-    binary = ":S3HonestMajorityShareShuffleMillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.aws.daemon.mill.shareshuffle.S3HonestMajorityShareShuffleMillDaemonKt",
+    name = "s3_honest_majority_share_shuffle_mill_job_image",
+    binary = ":S3HonestMajorityShareShuffleMillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.aws.job.mill.shareshuffle.S3HonestMajorityShareShuffleMillJobKt",
     target_compatible_with = DISTROLESS_JAVA,
     visibility = ["//src:docker_image_deployment"],
 )
