--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/daemon/mill/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/daemon/mill/BUILD.bazel
@@ -16,6 +16,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/measurement/common/k8s:client",
         "//src/main/kotlin/org/wfanet/measurement/duchy:computation_stage",
         "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common:flags",
+        "//src/main/kotlin/org/wfanet/measurement/duchy/mill:mill_type",
         "//src/main/proto/wfa/measurement/internal/duchy:computations_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/org/jetbrains/annotations",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
