--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/job/mill/shareshuffle/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/job/mill/shareshuffle/BUILD.bazel
@@ -6,10 +6,10 @@ load("//src/main/docker:macros.bzl", "java_image")
 package(default_testonly = True)  #TODO: delete when InMemoryKeyStore and FakeHybridCipher are not used.
 
 kt_jvm_library(
-    name = "honest_majority_share_shuffle_mill_daemon",
+    name = "honest_majority_share_shuffle_mill_job",
     srcs = [
-        "HonestMajorityShareShuffleMillDaemon.kt",
         "HonestMajorityShareShuffleMillFlags.kt",
+        "HonestMajorityShareShuffleMillJob.kt",
     ],
     visibility = ["//src/main/kotlin/org/wfanet/measurement/duchy/deploy:__subpackages__"],
     deps = [
@@ -37,10 +37,10 @@ kt_jvm_library(
 )
 
 kt_jvm_library(
-    name = "forwarded_storage_honest_majority_share_shuffle_mill_daemon",
-    srcs = ["ForwardedStorageHonestMajorityShareShuffleDaemon.kt"],
+    name = "forwarded_storage_honest_majority_share_shuffle_mill_job",
+    srcs = ["ForwardedStorageHonestMajorityShareShuffleMillJob.kt"],
     deps = [
-        ":honest_majority_share_shuffle_mill_daemon",
+        ":honest_majority_share_shuffle_mill_job",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/storage/forwarded",
@@ -48,15 +48,15 @@ kt_jvm_library(
 )
 
 java_binary(
-    name = "ForwardedStorageHonestMajorityShareShuffleMillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.common.daemon.mill.shareshuffle.ForwardedStorageHonestMajorityShareShuffleDaemonKt",
-    runtime_deps = [":forwarded_storage_honest_majority_share_shuffle_mill_daemon"],
+    name = "ForwardedStorageHonestMajorityShareShuffleMillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.common.job.mill.shareshuffle.ForwardedStorageHonestMajorityShareShuffleMillJobKt",
+    runtime_deps = [":forwarded_storage_honest_majority_share_shuffle_mill_job"],
 )
 
 java_image(
-    name = "forwarded_storage_honest_majority_share_shuffle_mill_daemon_image",
-    binary = ":ForwardedStorageHonestMajorityShareShuffleMillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.common.daemon.mill.shareshuffle.ForwardedStorageHonestMajorityShareShuffleDaemonKt",
+    name = "forwarded_storage_honest_majority_share_shuffle_mill_job_image",
+    binary = ":ForwardedStorageHonestMajorityShareShuffleMillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.common.job.mill.shareshuffle.ForwardedStorageHonestMajorityShareShuffleMillJobKt",
     target_compatible_with = DISTROLESS_JAVA,
     visibility = ["//src:docker_image_deployment"],
 )
