--- a/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/shareshuffle/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/job/mill/shareshuffle/BUILD.bazel
@@ -14,10 +14,10 @@ package(
 )
 
 kt_jvm_library(
-    name = "gcs_honest_majority_share_shuffle_mill_daemon",
-    srcs = ["GcsHonestMajorityShareShuffleMillDaemon.kt"],
+    name = "gcs_honest_majority_share_shuffle_mill_job",
+    srcs = ["GcsHonestMajorityShareShuffleMillJob.kt"],
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/daemon/mill/shareshuffle:honest_majority_share_shuffle_mill_daemon",
+        "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/common/job/mill/shareshuffle:honest_majority_share_shuffle_mill_job",
         "//src/main/kotlin/org/wfanet/measurement/duchy/deploy/gcloud/spanner/computation",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
@@ -26,18 +26,18 @@ kt_jvm_library(
 )
 
 java_binary(
-    name = "GcsHonestMajoriyShareShuffleMillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.gcloud.daemon.mill.shareshuffle.GcsHonestMajorityShareShuffleMillDaemonKt",
+    name = "GcsHonestMajoriyShareShuffleMillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.gcloud.job.mill.shareshuffle.GcsHonestMajorityShareShuffleMillJobKt",
     runtime_deps = [
-        ":gcs_honest_majority_share_shuffle_mill_daemon",
+        ":gcs_honest_majority_share_shuffle_mill_job",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/logging",
     ],
 )
 
 java_image(
-    name = "gcs_honest_majority_share_shuffle_mill_daemon_image",
-    binary = ":GcsHonestMajoriyShareShuffleMillDaemon",
-    main_class = "org.wfanet.measurement.duchy.deploy.gcloud.daemon.mill.shareshuffle.GcsHonestMajorityShareShuffleMillDaemonKt",
+    name = "gcs_honest_majority_share_shuffle_mill_job_image",
+    binary = ":GcsHonestMajoriyShareShuffleMillJob",
+    main_class = "org.wfanet.measurement.duchy.deploy.gcloud.job.mill.shareshuffle.GcsHonestMajorityShareShuffleMillJobKt",
     target_compatible_with = DISTROLESS_JAVA,
     visibility = ["//src:docker_image_deployment"],
 )
