--- a/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/job/BUILD.bazel
@@ -3,29 +3,33 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 load("//src/main/docker:macros.bzl", "java_image")
 
 kt_jvm_library(
-    name = "operational_metrics_job_executor",
-    srcs = ["OperationalMetricsJobExecutor.kt"],
+    name = "operational_metrics_export_job",
+    srcs = ["OperationalMetricsExportJob.kt"],
     runtime_deps = ["@wfa_common_jvm//imports/java/io/grpc/netty"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common:duchy_ids",
-        "//src/main/kotlin/org/wfanet/measurement/kingdom/job:operational_metrics_job",
+        "//src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/server:utils",
+        "//src/main/kotlin/org/wfanet/measurement/kingdom/job:operational_metrics_export",
+        "//src/main/proto/wfa/measurement/internal/kingdom:measurements_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/java/com/google/cloud/bigquery",
         "@wfa_common_jvm//imports/java/com/google/cloud/bigquerystorage",
         "@wfa_common_jvm//imports/java/picocli",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signing_certs",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
     ],
 )
 
 java_binary(
-    name = "OperationalMetricsJobExecutor",
-    main_class = "org.wfanet.measurement.kingdom.deploy.gcloud.job.OperationalMetricsJobExecutorKt",
-    runtime_deps = [":operational_metrics_job_executor"],
+    name = "OperationalMetricsExportJob",
+    main_class = "org.wfanet.measurement.kingdom.deploy.gcloud.job.OperationalMetricsExportJobKt",
+    runtime_deps = [":operational_metrics_export_job"],
 )
 
 java_image(
-    name = "operational_metrics_job_executor_image",
-    binary = ":OperationalMetricsJobExecutor",
-    main_class = "org.wfanet.measurement.kingdom.deploy.gcloud.job.OperationalMetricsJobExecutorKt",
+    name = "operational_metrics_export_job_image",
+    binary = ":OperationalMetricsExportJob",
+    main_class = "org.wfanet.measurement.kingdom.deploy.gcloud.job.OperationalMetricsExportJobKt",
     visibility = ["//src:docker_image_deployment"],
 )
