--- a/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha/BUILD.bazel
@@ -16,12 +16,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/frequency_count:frequency_vector_kt_jvm_proto",
         "//src/main/proto/wfa/frequency_count:secret_share_kt_jvm_proto",
         "//src/main/proto/wfa/frequency_count:secret_share_methods_kt_jvm__proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:crypto_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_spec_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:population_spec_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:protocol_config_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_fulfillment_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha:requisition_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/api/v2alpha:api_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/eventdataprovider/shareshuffle:vid_index_map_entry_kt_jvm_proto",
         "@any_sketch_java//src/main/java/org/wfanet/frequencycount:secret_share_generator_adapter",
         "@wfa_common_jvm//imports/java/com/google/common:guava",
