--- a/src/main/kotlin/org/wfanet/panelmatch/client/deploy/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/panelmatch/client/deploy/BUILD.bazel
@@ -29,10 +29,7 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/panelmatch/common/crypto",
         "//src/main/kotlin/org/wfanet/panelmatch/common/secrets",
         "//src/main/kotlin/org/wfanet/panelmatch/common/storage",
-        "//src/main/proto/wfa/measurement/api/v2alpha:certificates_service_kt_jvm_grpc",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempts_service_kt_jvm_grpc",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_steps_service_kt_jvm_grpc",
-        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_workflow_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/api/v2alpha:api_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/panelmatch/client/internal:exchange_workflow_kt_jvm_proto",
         "//src/main/proto/wfa/panelmatch/client/storage:storage_details_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/picocli",
